[metadata]
name = gmxtras
version = 0.0.1
author = ThePineapplePirate
author_email = braubeno@uno.edu
description = python scripts to help edit gromacs files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BlankenbergLab/gmxtras.git
project_urls =
    Bug Tracker = https://github.com/BlankenbergLab/gmxtras.git/issues/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = tools
packages = find:
python_requires = >=3.6

[options.packages.find]
where = tools
